--- a/LSFA/LSFA.tex
+++ b/LSFA/LSFA.tex
@@ -72,6 +72,7 @@
 \newcommand{\tL}{\mathbb{L}}
 \newcommand{\tR}{\mathbb{R}}
 \newcommand{\tE}{\mathbb{E}}
+\newcommand{\tT}{\mathbb{T}}
 \newcommand{\xvdash}{\vdash^{x}}
 \newcommand{\yvdash}{\vdash^{y}}
 \newcommand{\ex}{\mathsf{ex}}
@@ -1136,10 +1137,11 @@ For example, $\mathsf{focus} \ (\orrone \ f) = \orrone^{\RI} \ (\mathsf{focus} \
 \end{proof}
 
 \section{Extensions of the Logic}\label{sec:extensions}
-\subsection{Fully additive extension}\label{subsec:AddUnits}
-\cheng{I think fully additive sequent calculus may not be a good name. Do you have any suggestion?}
+\subsection{Aditive Units}\label{subsec:AddUnits}
+%\cheng{I think fully additive sequent calculus may not be a good name. Do you have any suggestion?}
 
-We make (\ref{eq:seqcalc}) fully additive by adding two additive units $\top$ and $\bot$ corresponding to $\land$ and $\lor$ respectively and the following two rules:
+The sequent calculus in (\ref{eq:seqcalc}) can be made ``fully'' additive by including two units $\top$ and $\bot$ %corresponding to $\land$ and $\lor$ respectively
+and rules:
 
 \begin{displaymath}
   \begin{array}{c}
@@ -1148,7 +1150,6 @@ We make (\ref{eq:seqcalc}) fully additive by adding two additive units $\top$ an
     \infer[\topr]{S \mid \Gamma \vdash \top}{}
   \end{array}
 \end{displaymath}
-
 % \begin{displaymath}
 %   \begin{array}{c}
 %     (\text{full associativity of sequents with } \bot \text{ in the stoup})
@@ -1160,11 +1161,17 @@ We make (\ref{eq:seqcalc}) fully additive by adding two additive units $\top$ an
 %   }
 %   \end{array}
 % \end{displaymath}
-\cheng{I am not sure how to call the categorical models here. How about distributive skew monoidal (co)cartesian categories?}
+%\cheng{I am not sure how to call the categorical models here. How about distributive skew monoidal (co)cartesian categories?}
 % The categorical models of the fully additive extension are distributive  
-
-
-The equivalence relation $\circeq$ is extended by two types of equations $(i)$ each derivation ending with a sequent having $\top$ as its succedent is equivalent to a derivation with only one rule application $\topr$ and $(ii)$ each derivation ending with a sequent having $\bot$ in the context is equivalent to a derivation with only $\botl$.
+The equivalence relation $\circeq$ is extended with two equations:
+\begin{equation*}\label{eq:units}
+  \small
+  \begin{array}{rclll}
+    f & \circeq \topr && f : S \mid \Gamma \vdash \top \\
+    f & \circeq \botl && f : \bot \mid \Gamma \vdash C
+  \end{array}
+\end{equation*}
+%types of equations $(i)$ each derivation ending with a sequent having $\top$ as its succedent is equivalent to a derivation with only one rule application $\topr$ and $(ii)$ each derivation ending with a sequent having $\bot$ in the context is equivalent to a derivation with only $\botl$.
 % \begin{equation}
 %   \begin{array}{rclll}
 %     \ax_{\top} &\circeq \topr
@@ -1192,99 +1199,100 @@ The equivalence relation $\circeq$ is extended by two types of equations $(i)$ e
 %     \orrtwo \ f &\circeq \botl &&f : \bot \mid \Gamma \vdash B
 %   \end{array}
 % \end{equation}
-The idea behind the definition of $\circeq$ is that when $\topr$ or $\botl$ is applicable, we should convert the whole derivation into the appropriate one.
-Therefore, in the focused calculus, $\topr$ is in phase $\RI$ where $\botl$ is in phase $\LI$ such that they can be applied as early as possible.
-
-\begin{equation}\label{eq:focus:units}
-  \begin{array}{lc}
-    \text{(right invertible)} & %\\[-4pt] &
-    \proofbox{
-      \infer[\andr]{S \mid \Gamma \vdash^{l_1?, l_2?}_{\RI} A \land B}{
-        S \mid \Gamma \vdash^{l_1?}_{\RI} A
-        &
-        S \mid \Gamma \vdash^{l_2?}_{\RI} B
-      }
-    \qquad
-    \infer[\topr]{S \mid \Gamma \vdash^{[]?}_{\RI} \top}{}
-    \qquad
-    \infer[\LI 2 \RI]{S \mid \Gamma \vdash^{t?}_{\RI} P}{S \mid \Gamma \vdash^{t?}_{\LI} P}
-    }
-    \\[10pt]
-    \text{(left invertible)} & %\\[-4pt] &
-    \proofbox{
-      \infer[\unitl]{\I \mid \Gamma \vdash_{\LI} P}{{-} \mid \Gamma \vdash_{\LI} P}
-    \qquad
-    \infer[\tl]{A \ot B \mid \Gamma \vdash_{\LI} P}{A \mid B , \Gamma \vdash_{\LI} P}
-    \qquad
-    \infer[\botl]{\bot \mid \Gamma \vdash_{\LI} P}{}
-    \\
-    \infer[\orl]{A \lor B \mid \Gamma \vdash P}{
-      A \mid \Gamma \vdash P
-      &
-      B \mid \Gamma \vdash P
-    }
-    \qquad
-    \infer[\F 2 \LI]{T \mid \Gamma \vdash^{t?}_{\LI} P}{T \mid \Gamma \vdash^{t?}_{\F} P}
-    }
-    \\[10pt]
-    \text{(focusing)} &    %\\[-4pt] &
-    \proofbox{
-    \infer[\pass]{{-} \mid A , \Gamma \vdash^{\tP?}_{\F} P }{
-        A \mid \Gamma \vdash_{\LI} P
-    }
-    \qquad
-    \infer[\ax]{X \mid \quad \vdash^{\tE?}_{\F} X}{}
-    \qquad
-    \infer[\unitr]{{-} \mid \quad \vdash^{\tE?}_{\F} \I}{}
-    }
-    \\[10pt]
-    \multicolumn{2}{c}{
-    \infer[\tr]{T \mid \Gamma , \Delta \vdash^{\tE?}_{\F} A \ot B}{
-      T \mid \Gamma \vdash^{l}_{\RI} A
-      &
-      {-} \mid \Delta \vdash_{\RI} B
-      &
-      l \ \text{valid}
-    }
-    \qquad
-    \infer[\orrone]{T \mid \Gamma \vdash^{\tE?}_{\F} A \lor B}{
-      T \mid \Gamma \vdash^{l}_{\RI} A
-      &
-      l \ \text{valid}
-    }
-    \qquad
-    \infer[\orrtwo]{T \mid \Gamma \vdash^{\tE?}_{\F} A \lor B}{
-      T \mid \Gamma \vdash^{l}_{\RI} B
-      &
-      l \ \text{valid}
-    }
-    }
-    \\[6pt]
-    \multicolumn{2}{c}{
-    \infer[\andlone]{A \land B \mid \Gamma \vdash^{\tL?}_{\F} P}{A \mid \Gamma \vdash_{\LI} P}
-    \qquad
-    \infer[\andltwo]{A \land B \mid \Gamma \vdash^{\tR?}_{\F} P}{B \mid \Gamma \vdash_{\LI} P}
-    }
-  \end{array}
-\end{equation}
-\cheng{We could invent a tag corresponding to $\topr$. For example, $T$ could be a choice. Which one is clearer?} 
-
-The notation $[]?$ in the rule $\topr$ means that the end sequent is either untagged or tagged by an empty sequent.
-The proof search proceeds similar as the procedure in (\ref{sec:focusing}), however we should be careful about the validity of a list of tags.
-Because of the presence of $\topr$, we should consider an empty list to be valid now.
-For example, consider the derivation of a sequent $X \mid \quad \vdash_{\F} (\top \land \top) \lor Y$:
-\begin{displaymath}
+%The idea behind the definition of $\circeq$ is that when $\topr$ or $\botl$ is applicable, we should convert the whole derivation into the appropriate one.
+Accordingly, in the focused sequent calculus we add $\topr$ in phase $\vdash_\RI$ and $\botl$ in phase $\vdash_\LI$, so  that they can be applied as early as possible.
+We include a new tag $\tT$ for $\top$. The validity condition for lists of tags stays the same.
+\begin{equation*}\label{eq:focus:units}
   \begin{array}{c}
-    \infer[\orrone]{X \mid \quad \vdash_{\F} (\top \land \top) \lor Y}{
-      \infer[\andr]{X \mid \quad \vdash^{[]}_{\RI} \top \land \top}{
-        \infer[\topr]{X \mid \quad \vdash^{[]}_{\RI} \top}{}
-        &
-        \infer[\topr]{X \mid \quad \vdash^{[]}_{\RI} \top}{}
-      }
-    }
+%    \text{(right invertible)} & %\\[-4pt] &
+%    \proofbox{
+%      \infer[\andr]{S \mid \Gamma \vdash^{l_1?, l_2?}_{\RI} A \land B}{
+%        S \mid \Gamma \vdash^{l_1?}_{\RI} A
+%        &
+%        S \mid \Gamma \vdash^{l_2?}_{\RI} B
+%      }
+%    \qquad
+    \infer[\topr]{S \mid \Gamma \vdash^{\tT?}_{\RI} \top}{}
+    \qquad
+ %   \infer[\LI 2 \RI]{S \mid \Gamma \vdash^{t?}_{\RI} P}{S \mid \Gamma \vdash^{t?}_{\LI} P}
+%    }
+%    \\[10pt]
+%    \text{(left invertible)} & %\\[-4pt] &
+%    \proofbox{
+%      \infer[\unitl]{\I \mid \Gamma \vdash_{\LI} P}{{-} \mid \Gamma \vdash_{\LI} P}
+%    \qquad
+%    \infer[\tl]{A \ot B \mid \Gamma \vdash_{\LI} P}{A \mid B , \Gamma \vdash_{\LI} P}
+%    \qquad
+    \infer[\botl]{\bot \mid \Gamma \vdash_{\LI} P}{}
+%    \\
+%    \infer[\orl]{A \lor B \mid \Gamma \vdash P}{
+%      A \mid \Gamma \vdash P
+%      &
+%      B \mid \Gamma \vdash P
+%    }
+%    \qquad
+%    \infer[\F 2 \LI]{T \mid \Gamma \vdash^{t?}_{\LI} P}{T \mid \Gamma \vdash^{t?}_{\F} P}
+%    }
+%    \\[10pt]
+%    \text{(focusing)} &    %\\[-4pt] &
+%    \proofbox{
+%    \infer[\pass]{{-} \mid A , \Gamma \vdash^{\tP?}_{\F} P }{
+%        A \mid \Gamma \vdash_{\LI} P
+%    }
+%    \qquad
+%    \infer[\ax]{X \mid \quad \vdash^{\tE?}_{\F} X}{}
+%    \qquad
+%    \infer[\unitr]{{-} \mid \quad \vdash^{\tE?}_{\F} \I}{}
+%    }
+%    \\[10pt]
+%    \multicolumn{2}{c}{
+%    \infer[\tr]{T \mid \Gamma , \Delta \vdash^{\tE?}_{\F} A \ot B}{
+%      T \mid \Gamma \vdash^{l}_{\RI} A
+%      &
+%      {-} \mid \Delta \vdash_{\RI} B
+%      &
+%      l \ \text{valid}
+%    }
+%    \qquad
+%    \infer[\orrone]{T \mid \Gamma \vdash^{\tE?}_{\F} A \lor B}{
+%      T \mid \Gamma \vdash^{l}_{\RI} A
+%      &
+%      l \ \text{valid}
+%    }
+%    \qquad
+%    \infer[\orrtwo]{T \mid \Gamma \vdash^{\tE?}_{\F} A \lor B}{
+%      T \mid \Gamma \vdash^{l}_{\RI} B
+%      &
+%      l \ \text{valid}
+%    }
+%    }
+%    \\[6pt]
+%    \multicolumn{2}{c}{
+%    \infer[\andlone]{A \land B \mid \Gamma \vdash^{\tL?}_{\F} P}{A \mid \Gamma \vdash_{\LI} P}
+%    \qquad
+%    \infer[\andltwo]{A \land B \mid \Gamma \vdash^{\tR?}_{\F} P}{B \mid \Gamma \vdash_{\LI} P}
+%    }
   \end{array}
-\end{displaymath}
-In this case, $\orrone$ generates and empty list of tags.
+\end{equation*}
+%\cheng{We could invent a tag corresponding to $\topr$. For example, $T$ could be a choice. Which one is clearer?} 
+%The notation $[]?$ in the rule $\topr$ means that the end sequent is either untagged or tagged by an empty sequent.
+%The proof search proceeds similar as the procedure in (\ref{sec:focusing}), however we should be careful about the validity of a list of tags.
+%Because of the presence of $\topr$, we should consider an empty list to be valid now.
+%For example, consider the derivation of a sequent $X \mid \quad \vdash_{\F} (\top \land \top) \lor Y$:
+%\begin{displaymath}
+%  \begin{array}{c}
+%    \infer[\orrone]{X \mid \quad \vdash_{\F} (\top \land \top) \lor Y}{
+%      \infer[\andr]{X \mid \quad \vdash^{[]}_{\RI} \top \land \top}{
+%        \infer[\topr]{X \mid \quad \vdash^{[]}_{\RI} \top}{}
+%        &
+%        \infer[\topr]{X \mid \quad \vdash^{[]}_{\RI} \top}{}
+%      }
+%    }
+%  \end{array}
+%\end{displaymath}
+%In this case, $\orrone$ generates and empty list of tags.
+
+Categorical models of the extended sequent calculus are the distributive monoidal categories of Section~\ref{sec:categorical} with additionally a terminal and an initial object, which moreover satisfy a \emph{(nullary) left-distributivity} (or \emph{absorption}) condition: the canonical morphism typed $0 \to 0 \ot C$ has an inverse $k : 0 \ot C \to 0$. The latter is used in the interpretation of the rule $\botl$.
 
 \subsection{Exchange}\label{subsec:Ex}
 We consider the commutative extension of (\ref{eq:seqcalc}) by adding a rule 
